--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,8 +6,9 @@
 name: Create and publish a Docker image
 
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - "*"
 
 env:
   REGISTRY: ghcr.io
